--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>no larp | please stop pretending to be rich</title>
+    <title>No Larp</title>
     <meta name="description" content="A friendly reminder to stop flexing fake money, rented cars, and pretend success. Just be real." />
     <meta name="author" content="no-larp.com" />
 
