--- a/index.html
+++ b/index.html
@@ -780,9 +780,9 @@
                 rel="noopener noreferrer"
                 class="text-primary hover:underline"
               >
-                nohello.net
+                no-larp.com
               </a>
-              • No cap was harmed in the making of this site
+              
             </p>
           </footer>
         </main>
