--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
             <p class="text-sm text-muted-foreground">
               
               <a 
-                href="https://nohello.net" 
+                href="https://no-larp.com/" 
                 target="_blank" 
                 rel="noopener noreferrer"
                 class="text-primary hover:underline"
